# edu.pyoop

./: .pre-commit-config.yaml  LICENSE  README.md  edu.pyoop.code-workspace  pyproject.toml
src/: task1.py  task10.py  task11.py  task12.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
tests/: test_task1.py  test_task10.py  test_task11.py  test_task12.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py  test_task6.py  test_task7.py  test_task8.py  test_task9.py
